--- a/src/main/webapp/medico/privado/index.xhtml
+++ b/src/main/webapp/medico/privado/index.xhtml
@@ -10,16 +10,20 @@
 
         <ui:composition template="/plantillas/plantillaComun.xhtml">
 
-            <ui:define name="tituloPagina">
+            <ui:define name="Medicos">
                 <h2>  Pagina principal de Médicos </h2>
             </ui:define>            
 
             <ui:define name="menu">
                 <ui:include src="/plantillas/menuComun.xhtml"/>
             </ui:define>
-
+            
             <ui:define name="contenido">
+                <h3>Opciones Médico</h3>
+                <li>    <h:link outcome="agenda" value="Agenda" /> </li>
+                <li>    <h:link outcome="credencialesAcceso" value="Credenciales de Acceso" /> </li>
             </ui:define>
+            
         </ui:composition>
 
     </body>
