--- a/src/main/webapp/medico/privado/credencialesAcceso.xhtml
+++ b/src/main/webapp/medico/privado/credencialesAcceso.xhtml
@@ -22,15 +22,15 @@ and open the template in the editor.
                 <h:form id="credencialesForm">
                     <b:column offset="3" span="7">
                         <b:panel title="Credenciales de Médico" look="primary" collapsible="false">
-                            <b:inputText id="colegiado" label="Número Colegiado" value="#{medicoControlador.medicoActual.getNumeroColegiado()}" />
-                            <b:inputText id="dni" label="DNI" readonly="true" value="#{medicoControlador.medicoActual.getDni()}" />
-                            <b:inputText id="nombre" label="Nombre" value="#{medicoControlador.medicoActual.getNombre()}" />
-                            <b:inputText id="apellidos" label="Apellidos" value="#{medicoControlador.medicoActual.getApellidos()}" />
-                            <b:inputText id="telefono" label="Teléfono" value="#{medicoControlador.medicoActual.getTelefono()}" />
-                            <b:inputText id="email" label="Email" value="#{medicoControlador.medicoActual.getEmail()}" />
+                            <b:inputText id="colegiado" label="Número Colegiado" value="#{medicoControlador.medicoActual.numeroColegiado}" />
+                            <b:inputText id="dni" label="DNI" readonly="true" value="#{medicoControlador.medicoActual.dni}" />
+                            <b:inputText id="nombre" label="Nombre" value="#{medicoControlador.medicoActual.nombre}" />
+                            <b:inputText id="apellidos" label="Apellidos" value="#{medicoControlador.medicoActual.apellidos}" />
+                            <b:inputText id="telefono" label="Teléfono" value="#{medicoControlador.medicoActual.telefono}" />
+                            <b:inputText id="email" label="Email" value="#{medicoControlador.medicoActual.email}" />
                             <b:inputSecret id="password" label="Contraseña:"/>
                             <b:commandButton value="Volver"  action="index" span="2"/>
-                            <b:commandButton value="Actualizar" span="2"/>
+                            <b:commandButton value="Actualizar" action="#{medicoControlador.actualizarCredenciales()}"  span="2"/>
                         </b:panel>
                             <f:facet name="footer">
                                 La contraseña no se muestra por motivos de seguridad;
