La devolucion de todos las citas de un medico para el dia de hoy
Hace falta pulir la vista, pero creo que funciona

--- a/src/main/webapp/medico/privado/index.xhtml
+++ b/src/main/webapp/medico/privado/index.xhtml
@@ -20,7 +20,7 @@
             
             <ui:define name="contenido">
                 <h3>Opciones Médico</h3>
-                <li>    <h:link outcome="agenda" value="Agenda" /> </li>
+                <li>    <h:link outcome="#{medicoControlador.doDevolverAllCitasMedico()}" value="Agenda" /> </li>
                 <li>    <h:link outcome="credencialesAcceso" value="Credenciales de Acceso" /> </li>
             </ui:define>
             
