--- a/src/main/webapp/medico/privado/agenda.xhtml
+++ b/src/main/webapp/medico/privado/agenda.xhtml
@@ -5,12 +5,62 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Agenda</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>Tabla Agenda</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      
+    <h:head>
+        <title>Gestión de Citas</title>
+    </h:head>
+    <h:body>
+        <ui:composition template="/plantillas/plantillaComun.xhtml">
+            <ui:define name="contenido">
+            <h3> Gestión de Citas </h3>
+                <h:form>
+                    <h:dataTable value="#{medicoControlador.citas}"
+                                 var="cita">
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="ID"/></f:facet>
+                            <h:outputText value="#{cita.id}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Apellidos Paciente"/></f:facet>
+                            <h:outputText value="#{cita.paciente.apellidos}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Nombre Paciente"/></f:facet>
+                            <h:outputText value="#{cita.paciente.nombre}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Estado"/></f:facet>
+                            <h:outputText value="#{cita.estado}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Fecha"/></f:facet>
+                            <h:outputText value="#{cita.fecha}">
+                                <f:convertDateTime pattern="dd/MM/yyyy, hh:mm"/>
+                            </h:outputText>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Duración"/></f:facet>
+                            <h:outputText value="#{cita.duracion}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><h:outputLabel value="Hora"/></f:facet>
+                            <h:outputText value="#{cita.hora}"/>
+                        </h:column>              
+                        <h:column>
+                            <h:commandButton value="Detalle" action="#{MedicoControlador.doShowCita()}"/>
+                        </h:column>     
+                    </h:dataTable>
+
+                    <h:commandButton value="Volver" action="index"/>
+
+                </h:form>
+            </ui:define>            
+        </ui:composition>
+        
+
+    </h:body>
 </html>
