--- a/src/main/webapp/medico/privado/listaPrescripcion.xhtml
+++ b/src/main/webapp/medico/privado/listaPrescripcion.xhtml
@@ -19,7 +19,7 @@ and open the template in the editor.
         <h3>Lista de prescripciones en vigor para el paciente</h3>
         <ui:composition template="/plantillas/plantillaComun.xhtml">
             <ui:define name="contenido">
-                <li>    <h:link outcome="#{medicoControlador.doNuevaPrescripcion()}" value="Nueva prescripcion" /> </li>
+                <li>    <h:link outcome="nuevaPrescripcion" value="Nueva prescripcion" /> </li>
                 <h:form id="listaPrescripcion">
                     <h:dataTable value="#{medicoControlador.prescripciones}"
                                  var="prescripcion">
