--- a/src/main/webapp/farmacia/privado/index.xhtml
+++ b/src/main/webapp/farmacia/privado/index.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
@@ -17,8 +18,11 @@
                 <ui:include src="/plantillas/menuComun.xhtml"/>
             </ui:define>
 
-            <ui:define name="contenido">
-            </ui:define>
+             <ui:define name="contenido">
+                <h3>Opciones Médico</h3>
+                <li>    <p:link outcome="buscarPaciente" value="Buscar Paciente" /> </li>
+                <li>    <p:link  value="Credenciales de Acceso" /> </li>
+             </ui:define>
 
         </ui:composition>
 
