--- a/src/main/webapp/medico/privado/index.xhtml
+++ b/src/main/webapp/medico/privado/index.xhtml
@@ -5,9 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <body>
-
         <ui:composition template="/plantillas/plantillaComun.xhtml">
 
             <ui:define name="Medicos">
@@ -20,8 +18,8 @@
             
             <ui:define name="contenido">
                 <h3>Opciones Médico</h3>
-                <li>    <h:link outcome="#{medicoControlador.doDevolverAllCitasMedico()}" value="Agenda" /> </li>
-                <li>    <h:link outcome="credencialesAcceso" value="Credenciales de Acceso" /> </li>
+                <li>    <p:link outcome="#{medicoControlador.doDevolverAllCitasMedico()}" value="Agenda" /> </li>
+                <li>    <p:link outcome="credencialesAcceso" value="Credenciales de Acceso" /> </li>
             </ui:define>
             
         </ui:composition>
