--- a/src/main/webapp/medico/privado/nuevaPrescripcion.xhtml
+++ b/src/main/webapp/medico/privado/nuevaPrescripcion.xhtml
@@ -9,7 +9,8 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:b="http://bootsfaces.net/ui">
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:p="http://primefaces.org/ui">
     
     <head>
         <title>Lista de prescripciones en vigor</title>
@@ -19,35 +20,35 @@ and open the template in the editor.
         <h3>Lista de prescripciones en vigor para el paciente</h3>
         <ui:composition template="/plantillas/plantillaComun.xhtml">
             <ui:define name="contenido">
-                <b:inputText id="nombre" label="Nombre" value="#" />
-                <b:inputText id="principioActivo" label="Principio activo" readonly="true" value="#" />
-                <b:inputText id="fabricante" label="Fabricante" value="#" />
-                <b:inputText id="familia" label="Familia" value="#" />
-                <b:inputText id="numeroDosis" label="Dosis" value="#" />
                 <h:form id="listaMedicamentos">
-                    <h:dataTable value="#{medicoControlador.medicamentos}"
-                                 var="medicamento">
-                        <h:column>
-                            <f:facet name="header"><h:outputLabel value="Nombre"/></f:facet>
+                    <p:dataTable value="#{medicoControlador.medicamentos}"
+                                 var="medicamento" selection="#{medicoControlador.selectedMeds}" rowKey="#{medicamento.id}" style="margin-bottom:0">
+                        <f:facet name="header">Selección de medicamentos para el paciente</f:facet>
+                        <p:column selectionMode="multiple" style="width:20px;text-align:center"/>
+                        <p:column sortBy="#{medicamento.nombre}" filterBy="#{medicamento.nombre}">
+                            <f:facet name="header"><p:outputLabel value="Nombre"/></f:facet>
                             <h:outputText value="#{medicamento.nombre}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header"><h:outputLabel value="Principio activo"/></f:facet>
+                        </p:column>
+                        <p:column sortBy="#{medicamento.principioActivo}" filterBy="#{medicamento.principioActivo}">
+                            <f:facet name="header"><p:outputLabel value="Principio activo"/></f:facet>
                             <h:outputText value="#{medicamento.principioActivo}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header"><h:outputLabel value="Fabricante"/></f:facet>
+                        </p:column>
+                        <p:column sortBy="#{medicamento.fabricante}" filterBy="#{medicamento.fabricante}">
+                            <f:facet name="header"><p:outputLabel value="Fabricante"/></f:facet>
                             <h:outputText value="#{medicamento.fabricante}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header"><h:outputLabel value="Familia"/></f:facet>
+                        </p:column>
+                        <p:column sortBy="#{medicamento.familia}" filterBy="#{medicamento.familia}">
+                            <f:facet name="header"><p:outputLabel value="Familia"/></f:facet>
                             <h:outputText value="#{medicamento.familia}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header"><h:outputLabel value="Dosis"/></f:facet>
+                        </p:column>
+                        <p:column sortBy="#{medicamento.numeroDosis}" filterBy="#{medicamento.numeroDosis}">
+                            <f:facet name="header"><p:outputLabel value="Dosis"/></f:facet>
                             <h:outputText value="#{medicamento.numeroDosis}"/>
-                        </h:column>
-                    </h:dataTable>
+                        </p:column>
+                        <f:facet name="footer">
+                            <p:commandButton icon="ui-icon-plusthick" value="Asign" oncomplete="#" />
+                        </f:facet>
+                    </p:dataTable>
                 </h:form>
             </ui:define>            
         </ui:composition>
