--- a/src/main/webapp/medico/privado/listaPrescripcion.xhtml
+++ b/src/main/webapp/medico/privado/listaPrescripcion.xhtml
@@ -19,8 +19,9 @@ and open the template in the editor.
         <h3>Lista de prescripciones en vigor para el paciente</h3>
         <ui:composition template="/plantillas/plantillaComun.xhtml">
             <ui:define name="contenido">
-                <li>    <h:link outcome="nuevaPrescripcion" value="#{medicoControlador.doNuevaPrescripcion()}"/> </li>
                 <h:form id="listaPrescripcion">
+                    <h:commandButton value="Añadir" action="#{medicoControlador.doNuevaPrescripcion()}"/>
+                    <h:commandButton value="Volver"  action="#{medicoControlador.doDevolverAllCitasMedico()}"/>
                     <p:dataTable value="#{medicoControlador.prescripciones}"
                                  var="prescripcion">
                         <p:column>
