--- a/src/main/webapp/medico/privado/editarPrescripcion.xhtml
+++ b/src/main/webapp/medico/privado/editarPrescripcion.xhtml
@@ -23,8 +23,8 @@ and open the template in the editor.
                 <h:form id="editarPrescripcion">
                     <b:column offset="3" span="7">
                         <b:panel title="Editar Prescipcion" look="primary" collapsible="false">
-                            <p:dataTable value="#{medicoControlador.medicamentos}"
-                                 var="medicamento" selection="#{medicoControlador.selectedMed}" rowKey="#{medicamento.id}" style="margin-bottom:0">
+                            <p:dataTable value="#{prescripcionControlador.medicamentos}"
+                                 var="medicamento" selection="#{prescripcionControlador.selectedMed}" rowKey="#{medicamento.id}" style="margin-bottom:0">
                                 <f:facet name="header">Selección de medicamentos para el paciente</f:facet>
                                 <p:column selectionMode="single" style="width:50px;text-align:center"/>
                                 <p:column sortBy="#{medicamento.nombre}" filterBy="#{medicamento.nombre}">
@@ -49,20 +49,20 @@ and open the template in the editor.
                                 </p:column>
                             </p:dataTable>
                             <p:separator/>
-                            <b:inputText id="dosis" label="Dosis" value="#{medicoControlador.prescripcion.dosis}" />
-                            <b:inputText id="indicaciones" label="Indicaciones" value="#{medicoControlador.prescripcion.indicaciones}" />
+                            <b:inputText id="dosis" label="Dosis" value="#{prescripcionControlador.prescripcion.dosis}" />
+                            <b:inputText id="indicaciones" label="Indicaciones" value="#{prescripcionControlador.prescripcion.indicaciones}" />
                             <div class="ui-g-12 ui-md-6 ui-lg-3">
                                 <p:outputLabel value="Fecha inicio:" for="fechaInicio" />
-                                <p:calendar id="fechaInicio" label="Fecha de Inicio" value="#{medicoControlador.prescripcion.fechaInicio}" pattern="dd-MM-yyyy" />
+                                <p:calendar id="fechaInicio" label="Fecha de Inicio" value="#{prescripcionControlador.prescripcion.fechaInicio}" pattern="dd-MM-yyyy" />
                             </div>
                             <div class="ui-g-12 ui-md-6 ui-lg-3">
                                 <p:outputLabel value="Fecha fin:" for="fechaFin" />
-                                <p:calendar id="fechaFin" label="Fecha Final" value="#{medicoControlador.prescripcion.fechaFin}" pattern="dd-MM-yyyy" />
+                                <p:calendar id="fechaFin" label="Fecha Final" value="#{prescripcionControlador.prescripcion.fechaFin}" pattern="dd-MM-yyyy" />
                             </div>    
                         </b:panel>    
                     </b:column>
-                    <p:commandButton value="Editar prescripcion" action="#{medicoControlador.editarPrescripcion()}" />
-                    <p:commandButton value="Return" action="#{medicoControlador.doShowRecetas(medicoControlador.prescripcion.paciente)}" />
+                    <p:commandButton value="Editar prescripcion" action="#{prescripcionControlador.editarPrescripcion()}" />
+                    <p:commandButton value="Return" action="#{prescripcionControlador.doShowRecetas(prescripcionControlador.prescripcion.paciente)}" />
                 </h:form>
             </ui:define>            
         </ui:composition>
