Acabado el poder cambiar el estado de la cita...
Ahora se puede modificar el estado de una cita, y he refactorizado
levementa esta gestion (la de cita)... aun hay que pulir mas el codigo

--- a/src/main/webapp/medico/privado/detallesCita.xhtml
+++ b/src/main/webapp/medico/privado/detallesCita.xhtml
@@ -40,9 +40,14 @@ and open the template in the editor.
                             <h:outputText id="duracion" value="#{medicoControlador.citaDetalle.duracion} mins" />
                             
                             <h:outputLabel value="Estado"/>
-                            <h:outputText id="estado" value="#{medicoControlador.citaDetalle.estado}" /> 
+                            <h:selectOneMenu value="#{medicoControlador.citaDetalle.estado}">
+                                <f:selectItem itemValue="PLANIFICADA" itemLabel="PLANIFICADA" />
+                                <f:selectItem itemValue="COMPLETADA" itemLabel="COMPLETADA" />
+                                <f:selectItem itemValue="AUSENTE" itemLabel="AUSENTE" />
+                            </h:selectOneMenu>
                         </p:panelGrid>
                     <p:commandButton value="Volver"  action="#{medicoControlador.doDevolverAllCitasMedico()}"/>
+                    <p:commandButton value="Actualizar Estado"  action="#{medicoControlador.doActualizarEstadoCita()}"/>
                     <p:commandButton value="Ver recetas"  action="#{prescripcionControlador.doShowRecetas(medicoControlador.citaDetalle.paciente, medicoControlador.medicoActual, medicoControlador.citaDetalle)}"/>
                 </h:form>
             </ui:define>            
