Leve mejora a las vistas
Añadi unos titulos a las vistas

--- a/src/main/webapp/medico/privado/editarPrescripcion.xhtml
+++ b/src/main/webapp/medico/privado/editarPrescripcion.xhtml
@@ -21,6 +21,7 @@ and open the template in the editor.
         <ui:composition template="/plantillas/plantillaComun.xhtml">
             <ui:define name="contenido">
                 <h:form id="editarPrescripcion">
+                    <h3>Editar Prescripcion</h3>
                     <b:column offset="3" span="7">
                         <b:panel title="Editar Prescipcion" look="primary" collapsible="false">
                             <p:dataTable value="#{prescripcionControlador.medicamentos}"
