--- a/src/main/webapp/farmacia/privado/index.xhtml
+++ b/src/main/webapp/farmacia/privado/index.xhtml
@@ -19,7 +19,7 @@
             </ui:define>
 
              <ui:define name="contenido">
-                <h3>Opciones Médico</h3>
+                <h3>Opciones Farmaceutico</h3>
                 <li>    <p:link outcome="buscarPaciente" value="Buscar Paciente" /> </li>
                 <li>    <p:link  value="Credenciales de Acceso" /> </li>
              </ui:define>
