--- a/src/main/webapp/farmacia/privado/listaRecetas.xhtml
+++ b/src/main/webapp/farmacia/privado/listaRecetas.xhtml
@@ -9,7 +9,8 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui">
       
     <h:head>
         <title>Gestión de Recetas</title>
@@ -38,29 +39,16 @@ and open the template in the editor.
                         <p:column headerText="ESTADO">
                             <h:outputText value="GENERA/SERVIDA/ANULADA"/>
                         </p:column>
-                        <p:column headerText="MED">
-                                <h:outputText value="#{prescripcion.medicamento.nombre}"/>
-                        </p:column>
-                        <p:column headerText="P.ACTIVO">
-                            <h:outputText value="#{prescripcion.medicamento.principioActivo}"/>
-                        </p:column>
-                        <p:column headerText="FAB">
-                            <h:outputText value="#{prescripcion.medicamento.fabricante}"/>
-                        </p:column>
-                        <p:column headerText="DOSIS">
-                            <h:outputText value="#{prescripcion.dosis}"/>
+                        <p:column headerText="MEDICAMENTO">
+                            <p:link href="#{gestionMedicamentosControlador.detalle(prescripcion.medicamento)}" 
+                                    value="#{prescripcion.medicamento.nombre}"/>
                         </p:column>
                         <p:column headerText="INSTRUC.">
                             <h:outputText value="#{prescripcion.indicaciones}"/>
                         </p:column>
                         <p:column headerText="MÉDICO">
-                            <h:outputText value="#{prescripcion.medico.numeroColegiado}"/>
-                        </p:column>
-                         <p:column headerText="NOMBRE">
-                            <h:outputText value="#{prescripcion.medico.nombre}"/>
-                        </p:column>
-                        <p:column headerText="APELLIDOS">
-                            <h:outputText value="#{prescripcion.medico.apellidos}"/>
+                            <p:link href="#{medicoControlador.detalleMedico(prescripcion.medico)}" 
+                                    value="#{prescripcion.medico.numeroColegiado}"/>
                         </p:column>
                     </p:dataTable>
                     <h:commandButton value="Volver" action="index"/>
