--- a/src/main/webapp/farmacia/privado/buscarPaciente.xhtml
+++ b/src/main/webapp/farmacia/privado/buscarPaciente.xhtml
@@ -27,7 +27,7 @@
                             <b:inputText id="telefono" label="Teléfono" readonly="true" value="#{farmaciaControlador.paciente.telefono}" />
                             <b:inputText id="nseguridadSocial" label="Nº Seguridad Social" readonly="true" value="#{farmaciaControlador.paciente.numeroSeguridadSocial}" />
                             <b:inputText id="nTarjetaSanitaria" label="Nº Tarjeta Sanitaria" readonly="true" value="#{farmaciaControlador.paciente.numeroTarjetaSanitaria}" />
-                            <b:commandButton value="Recetas" action="#{farmaciaControlador.recetas()}"  span="7"/>
+                            <b:commandButton value="Prescripciones" action="#{farmaciaControlador.recetas()}"  span="10"/>
                         </b:panel>
                     </b:column>
                 </h:form>
